# engine3d

./: .gitignore  README.md
content/: cube.mtl
engine3d/: .gitignore
engine3d/content/: savefile.json
engine3d/src/: game2_modes.rs  music.rs
engine3d/voxels/: Cargo.toml
engine3d/voxels/src/: camera_control.rs  collision.rs  geom.rs  instance_raw.rs  main.rs  main_backup.rs  model.rs  particle.rs  player.rs
engine3d_1/: Cargo.toml
engine3d_1/src/: lib.rs  saveload.rs
voxels/: Cargo.toml  build.rs  save.txt
voxels/src/: assets.rs  camera.rs  camera_control.rs  collision.rs  coordinates.rs  events.rs  gamestate.rs  geom.rs  lib.rs  main.rs  mainOld.rs  model.rs  particle.rs  player.rs  render.rs  save.rs  shader.vert  shader2d.vert  shader2d.vert.spv  sound.rs  voxel.rs  world_gen.rs
