[package]
name = "anim2d"
version = "0.1.0"
authors = ["deyanamarsh <dmarsh@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
image = "0.23.12"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rodio = "0.13.0"

